<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_cadastro"
            android:icon="@drawable/ic_cadastro_api"
            android:title="@string/menu_cadastro" />
        <item
            android:id="@+id/nav_consulta"
            android:icon="@drawable/ic_consulta_api"
            android:title="@string/menu_consulta" />

        <item
            android:id="@+id/nav_listafilmes"
            android:icon="@drawable/ic_videos_list"
            android:title="@string/menu_filmes" />
        <item
            android:id="@+id/nav_avatares"
            android:icon="@drawable/ic_avatares_list"
            android:title="@string/menu_avatares" />
        <item
            android:id="@+id/nav_trailer"
            android:icon="@drawable/ic_trailer"
            android:title="@string/menu_trailer" />

        <item android:title="@string/menu_extras">
        <menu>
            <item
                android:id="@+id/nav_desenvolvimento"
                android:icon="@drawable/ic_resumo"
                android:title="@string/menu_desenvolvimento"/>
            <item
                android:id="@+id/nav_agradecimento"
                android:icon="@drawable/ic_agradecimento"
                android:title="@string/menu_agradecimento"/>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_contato"
                android:title="@string/menu_contato"/>

        </menu>

        </item>
        <item android:title="@string/menu_sair_app">
            <menu>
                <item
                    android:id="@+id/nav_sair"
                    android:icon="@drawable/ic_sair"
                    android:title="@string/menu_sair"/>
            </menu>
            </item>
    </group>
</menu>