<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    layout_width="match_patent"

    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundologin"
    tools:context=".activityview.StarLogin">

    <TextView
        android:id="@+id/teste"
        android:text="@string/bemvindo" android:textAlignment="center"
        android:textColor="@color/black" android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/conteinerComponents"
        style="@style/ContainerComponents"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teste" />

    <EditText
        android:id="@+id/email"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/ic_email2"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:hint="Email" android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/conteinerComponents"
        app:layout_constraintStart_toStartOf="@id/conteinerComponents"
        app:layout_constraintTop_toTopOf="@id/conteinerComponents" />

    <EditText
        android:id="@+id/senha"
        style="@style/Edit_Text"
        android:textColor="@color/white"
        android:drawableRight="@drawable/ic_senha2"
        android:inputType="numberPassword"
        android:hint="Senha" android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/conteinerComponents"
        app:layout_constraintStart_toStartOf="@id/conteinerComponents"
        app:layout_constraintTop_toBottomOf="@id/email"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter"
        style="@style/Button"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha" />
    <TextView
        android:id="@+id/grupo"
        android:text="@string/grupo" android:textAlignment="center" android:textStyle="italic"
        android:textColor="@color/grey11"
        style="@style/Edit_Text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/gold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conteinerComponents"
        />

    <TextView
        android:id="@+id/cad_nova_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/criarconta"
        android:textColor="@color/grey11"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>